fixed an issue with the navigation overlapping the content

--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -57,7 +57,7 @@
         top: 0;
         left: 0;
         z-index: 1500;
-
+        display: none;
         opacity: 0;
         width: 0;
         transition: all .8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
@@ -114,6 +114,7 @@
     &__checkbox:checked ~ &__nav {
         opacity: 1;
         width: 100%;
+        display: block;
     }
 
 
